--- a/sections/conclusion.tex
+++ b/sections/conclusion.tex
@@ -8,7 +8,7 @@
 % - Needs to be applied to more existing approaches
 % - Are there any areas lacking research?
 
-This paper proposed a classification for Optimization Approaches for \acrlong{sas}[s].
+This paper proposed a classification for \acrlong{oa}[es] for \acrlong{sas}[s].
 The classification was derived from the same principles as the taxonomy for \acrlong{sas}[s]
 by Krupitzer et al., 2015 \cite*{SurveyOnEngineeringApproaches}.
 The main principles that were used to derive the classification are:
@@ -17,27 +17,22 @@ The main principles that were used to derive the classification are:
     \item The MAPE-K feedback loop which was created by Kephart and Chess, 2003 \cite*{VisionOfAutonomicComputing}.
 \end{itemize}
 
-To classify Optimization Approaches the proposed classification provides six dimensions:
+To classify \acrshort{oa} the proposed classification provides six dimensions:
 Location, Time, Purpose, Approach, Technique and Reflective Adaptation Control.
 These are shown in Figure \ref{fig:Proposal}.
 
-\noindent The Location dimension asks on which level optimizations in a Self-Adaptive System might be necessary.
-Time distinguishes between Optimization Approaches that are performed during the design time of the system,
+\noindent The Location dimension asks on which level optimizations in a \acrlong{sas} might be necessary.
+Time distinguishes between \acrshort{oa} that are performed during the design time of the system,
 during the run time or online phase of the system or approaches that optimize systems during their offline phase.
 The dimension of Purpose provides a reason for Optimizations to be performed.
 Approach determines who is responsible for optimizations
-and Technique states which parts of a Self-Adaptive System can be optimized.
+and Technique states which parts of a \acrshort{sas} can be optimized.
 Lastly, the Reflective Adaptation Control classifies how optimizations are performed.
 
-\noindent After proposing a classification, it was exemplarily applied to several existing Optimization Approaches.
+\noindent After proposing a classification, it was exemplarily applied to three existing \acrshort{oa}.
 This is a part where further research is required. 
 The classification has to be applied to further existing approaches to verify its validity and completeness.
-This would also yield a way to determine areas which require further research.
 
-% \begin{itemize}
-%     \item Recommending future research directions: \begin{itemize}
-%         \item Applying the proposed classification to more existing optimization approaches.
-%         \item Possible directions for new optimization approaches.
-%     \end{itemize}
-%     \item What are the limitations of this paper?
-% \end{itemize}
+\noindent By applying the classification to more approaches, 
+one could also gain a structured overview over existing approaches.
+This can be used to identify approaches that have not been explored yet.
